--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebb-create-forum",
+  "name": "nodebb-plugin-create-forum",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,10 @@
   "author": "bandana sahu <bandana.tarento@gmail.com> (http://www.magicmikemovie.com)",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
   }
 }
