--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "winston": "^3.3.3"
   }
 }
